--- a/pom.xml
+++ b/pom.xml
@@ -7,23 +7,44 @@
     <groupId>by.cristina</groupId>
     <artifactId>EpamAutoTraining</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <testng.version>7.1.0</testng.version>
+        <selenium.version>4.0.0-alpha-7</selenium.version>
+        <assertj.version>3.18.1</assertj.version>
+        <java.compiler.source>1.8</java.compiler.source>
+        <java.compiler.target>1.8</java.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>${java.compiler.source}</source>
+                    <target>${java.compiler.target}</target>
                 </configuration>
             </plugin>
         </plugins>
     </build>
     <dependencies>
         <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>${selenium.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.1.0</version>
+            <version>${testng.version}</version>
         </dependency>
     </dependencies>
 
